# opal_beautifulsoup

./: .gitignore  2025-06-11_court.json  404.html  JEKYLL_SETUP.md  README.md  _config.yml  add_jekyll_frontmatter.py  alabama_appeals_court_20250611_164421.csv  alabama_appeals_court_20250611_164421.json  build-docs.sh  check_links.sh  check_prerequisites.py  deploy.sh  documentation_consolidation_plan.md  documentation_improvement_recommendations.md  documentation_update_instructions.md  extract_all_court_cases.py  index.html  index.md  mkdocs.yml  pyproject.toml  requirements.txt  run_opal.py  setup.py  test_court_cases.json  test_court_parser.py  test_court_parser_full.py
about/: index.html
api_reference/: index.html
beautifulsoup/: OPaL.ipynb  url_catcher.ipynb
court_scraper_analysis/: index.html
developer/: index.html
docs/: 404.html  BaseParser_web_scraping_guide.md  OPaL_testingUI.ipynb  ParserAppealsAL_documentation.md  alabama_appeals_court_scraper_instructions.md  api_reference.md  command_line_tools.md  configurable_court_extractor_design.md  documentation_improvement_recommendations.md  index.html  index.md  sitemap.xml  user_agent_headers_guide.md
docs_source/: component-preview.html  components-showcase.md  index.md
examples/: alabama_appeals_court_complete_20250611_165447.csv  court_cases_20250613_163259.csv  court_cases_20250613_163259.json  court_cases_20250613_163500.json  court_cases_20250613_163747.csv  court_cases_20250613_163747.json
getting-started/: index.html
jupyter_practice/: OPaL_testingUI.ipynb  url_catcher_testingUI.ipynb
(+249 files in other folders)
