[project]
name = "opal"
version = "0.1.0"
description = "OPAL - Oppositional Positions in Alabama: Web scraper for Alabama news sites and court records"
authors = [
    {name = "Gabriel Cabán Cubero", email = "gabri@alforward.org"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests",
    "beautifulsoup4",
    "setuptools",
    "typing",
    "selenium>=4.0.0",
    "webdriver-manager>=4.0.0"
]

[project.scripts]
opal = "opal.main:main"

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"
